crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__hexadecimal_entity_with_mixed_uppercase_and_lowercase.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"&#xaBcD;\"####)"
---
[
    Token {
        data: "ꯍ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
