crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__illegal_end_tag_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"</1>\"####)"
---
[
    Token {
        data: "1",
        attrs: None,
        kind: Comment,
        is_implied: false,
    },
    Token {
        data: "",
        attrs: None,
        kind: CommentEnd,
        is_implied: false,
    },
]
