crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__incorrect_doctype_without_a_space_before_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<!DOCTYPEfoo>\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPEfoo": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
