crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__simili_processing_instruction.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<?namespace>\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "?namespace": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
