crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__single_hyphen_quote_after_attribute_name.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<h a '>\"####)"
---
[
    Token {
        data: "h",
        attrs: Some(
            {
                "'": None,
                "a": None,
            },
        ),
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
