crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__start_tag_with_no_attributes_but_space_before_the_greaterhyphen_than_sign.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"<h >\"#)"
---
[
    Token {
        data: "h",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "h",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
